@@ -17,6 +17,10 @@ Tim Blechmann
   Jackdmp changes log
 ---------------------------
 
+2008-01-03 Stephane Letz  <letz@grame.fr>
+
+	* Tim Blechmann patch for JackGraphManager::GetPortsAux memory leak, Tim Blechmann patch for scons install.
+
 2007-12-12 Stephane Letz  <letz@grame.fr>
 
 	* Cleanup in CoreAudio driver.
